# yqrs

./: Cargo.toml  README.md  cbindgen.toml
include/: yq.h
src/: v1.rs
src/v1/: eval.rs  expr.rs  ffi.rs  lex.rs  macros.rs  parser.rs  query.rs
src/v1/eval/: op_compat.rs
